Fixed center spacing on review sqaures

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,12 +189,13 @@ body {
 
 .reviewboxsub {
     position: absolute;
-    color: pink;
+    color: yellow;
+    padding-top: 3rem;
     font-weight: 700;
     text-align: center;
     font-size: .75rem;
     letter-spacing: 0.5rem;
-    line-height: 1.6;
+    line-height: 2.4rem;
     text-transform: uppercase;  
 }
 
